[gd_scene load_steps=2 format=3 uid="uid://menu001"]

[ext_resource type="Script" uid="uid://ckag34tb00idw" path="res://scripts/ui/main_menu.gd" id="1_script"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.1, 0.15, 1)

[node name="TitleContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Title" type="Label" parent="TitleContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "PROJECT GUARDIANS"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.8, 1)
theme_override_font_sizes/font_size = 18
text = "Tower Defense Roguelike"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="TitleContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="NewGameButton" type="Button" parent="TitleContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 22
text = "‚öîÔ∏è New Run"

[node name="ContinueButton" type="Button" parent="TitleContainer"]
visible = false
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 22
text = "Continue"

[node name="ProgressionButton" type="Button" parent="TitleContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 18
text = "‚ú® Meta-Progression"

[node name="SettingsButton" type="Button" parent="TitleContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 18
text = "‚öôÔ∏è Settings"

[node name="QuitButton" type="Button" parent="TitleContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 18
text = "üö™ Quit"

[node name="EssenceDisplay" type="HBoxContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 50.0
grow_horizontal = 0
theme_override_constants/separation = 10
alignment = 2

[node name="EssenceIcon" type="Label" parent="EssenceDisplay"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "‚ú®"

[node name="EssenceLabel" type="Label" parent="EssenceDisplay"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.3, 1, 1)
theme_override_font_sizes/font_size = 20
text = "0"

[node name="VersionLabel" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -40.0
offset_right = 200.0
offset_bottom = -20.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 12
text = "v0.1.0 - Alpha"
